domain feature analysis codes updated

--- a/notebooks/3. curated/domain_joining_part1.ipynb
+++ b/notebooks/3. curated/domain_joining_part1.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This jupyternotebook file is used to join the cleaned domain data with openRouteServices distance to the domain data which has gone through SVC to recategorize the cost category"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,13 +17,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "24/10/07 07:24:13 WARN Utils: Your hostname, DESKTOP-VD1EQUL resolves to a loopback address: 127.0.1.1; using 10.255.255.254 instead (on interface lo)\n",
-      "24/10/07 07:24:13 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/10/18 15:23:02 WARN Utils: Your hostname, DESKTOP-VD1EQUL resolves to a loopback address: 127.0.1.1; using 10.255.255.254 instead (on interface lo)\n",
+      "24/10/18 15:23:02 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/10/07 07:24:14 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/10/07 07:24:14 WARN Utils: Service 'sparkDriver' could not bind on port 6066. Attempting port 6067.\n",
-      "24/10/07 07:24:15 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "24/10/18 15:23:03 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -69,6 +74,38 @@
    "outputs": [],
    "source": [
     "VIC_amenities = spark.read.parquet(\"../../data/raw/VIC_amenities\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border='1'>\n",
+       "<tr><th>name</th><th>amenity</th><th>latitude</th><th>longitude</th></tr>\n",
+       "<tr><td>Foodalicious Cate...</td><td>restaurant</td><td>-37.8866323</td><td>145.0208818</td></tr>\n",
+       "<tr><td>The Orient Chines...</td><td>restaurant</td><td>-37.8869075</td><td>145.0231412</td></tr>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "+--------------------+----------+-----------+-----------+\n",
+       "|                name|   amenity|   latitude|  longitude|\n",
+       "+--------------------+----------+-----------+-----------+\n",
+       "|Foodalicious Cate...|restaurant|-37.8866323|145.0208818|\n",
+       "|The Orient Chines...|restaurant|-37.8869075|145.0231412|\n",
+       "+--------------------+----------+-----------+-----------+"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "VIC_amenities.limit(2)"
    ]
   },
   {
@@ -173,7 +210,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Step 1: Find duplicate keys\n",
     "duplicates_df = domain_open_route.groupBy(\"url\", \"name\") \\\n",
     "    .agg(F.count(\"*\").alias(\"count\")) \\\n",
@@ -370,6 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dropping all columns that were unecessarily causing merge conflicts due to duplications and giving no value\n",
     "domain_cost_per_week = domain_cost_per_week.drop(\"car_parks\", \"cost_text\",\n",
     "                                                 \"suburb\", \"postcode\", \"rent_pw\",\n",
     "                                                 \"school_name\", \"school_walking\",\n",
@@ -492,12 +529,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# domain_cleaned = domain_joined.drop(\"url\", \"name\", \"latitude\",\n",
-    "#                                     \"longitude\", \"cost_text\", \n",
-    "#                                     \"rent_pw\", \"school_name\",\n",
-    "#                                     \"hospital_name\", \"doctors_name\",\n",
-    "#                                     \"bank_name\", \"restaurant_name\",\n",
-    "#                                     \"PTV_name\")\n",
+    "# Drop duplicate columns\n",
+    "domain_cleaned = domain_joined.drop(\"url\", \"name\", \"latitude\",\n",
+    "                                    \"longitude\", \"cost_text\", \n",
+    "                                    \"rent_pw\", \"school_name\",\n",
+    "                                    \"hospital_name\", \"doctors_name\",\n",
+    "                                    \"bank_name\", \"restaurant_name\",\n",
+    "                                    \"PTV_name\")\n",
     "\n",
     "domain_cleaned = domain_joined"
    ]
