--- a/notebooks/3. curated/domain_joining_part2.ipynb
+++ b/notebooks/3. curated/domain_joining_part2.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This jupyterntoebook is to join the domain data gotten from part 1 to crime, school merged data and suburb economics data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -82,10 +89,11 @@
     }
    ],
    "source": [
+    "# Get all the good stuff\n",
     "domain_clean = spark.read.parquet(\"../../data/curated/domain_cleaned_pyspark\", header=True)\n",
     "full_merged = spark.read.csv(\"../../data/raw/merged_crime_schools_distances_land.csv\", header=True)\n",
     "final_economics = spark.read.csv(\"../../data/raw/final.csv\", header=True)\n",
-    "merged_suburb = spark.read.csv(\"../../data/raw/merged_as_suburbs.csv\", header=True)\n"
+    "merged_suburb = spark.read.csv(\"../../data/raw/merged_as_suburbs.csv\", header=True)"
    ]
   },
   {
@@ -320,7 +328,7 @@
    "source": [
     "from pyspark.sql.functions import trim\n",
     "\n",
-    "# Assuming 'df' is your DataFrame and 'suburbs' is the column with suburb names\n",
+    "# Removing all empty spaces in suburb\n",
     "domain_clean = domain_clean.withColumn('suburb', trim(domain_clean['suburb']))\n"
    ]
   },
@@ -710,7 +718,7 @@
     "# Add a row number for each partition (suburb) based on the order of year and quarter\n",
     "df_with_row_num = full_merged_no_null.withColumn('row_num', row_number().over(window_spec))\n",
     "\n",
-    "# Filter to get the latest year and quarter for each suburb (where row_num == 1)\n",
+    "# Filter to get the latest year and quarter for each suburb\n",
     "full_merged_no_null = df_with_row_num.filter(col('row_num') == 1).drop('row_num')"
    ]
   },
@@ -1248,7 +1256,7 @@
     }
    ],
    "source": [
-    "# Assuming df is your PySpark DataFrame and 'year' is the column you want to filter on\n",
+    "# Filtering by year\n",
     "final_economics = final_economics.filter((F.col('year') == 2023) & (F.col(\"housing: type\") == \"all\"))\n",
     "final_economics = final_economics.drop('economic: median age of earners',\n",
     "                                       'economic: median income',\n",
