--- a/notebooks/3. curated/process_weekly_rate.ipynb
+++ b/notebooks/3. curated/process_weekly_rate.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clean Rental Rate Notebook\n",
-    "\n",
-    "This notebook aims to clean the rental rates for the given data.\n",
-    "\n",
-    "First we perform necessary imports."
+    "### This notebook uses SVC model to recategorise the domain cost categories"
    ]
   },
   {
