--- a/notebooks/4. analysis/b. modelling/domain_features_modeling.ipynb
+++ b/notebooks/4. analysis/b. modelling/domain_features_modeling.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This jupyternotebook is used to do modeling on the domain data to get insights."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -563,6 +570,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Results**\n",
+    "- Lasso Regression RMSE: 292.000463479719\n",
+    "- Lasso Regression MAE: 155.67632241244513\n",
+    "- Lasso Regression R^2: 0.29845967448486077"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -664,6 +681,30 @@
     "\n",
     "# Show the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------------------------------------------------\n",
+    "Gradient Boosting RMSE: 273.47333492858655\n",
+    "Gradient Boosting MAE: 133.0668590575047\n",
+    "Gradient Boosting r^2: 0.38462936128836017\n",
+    "-----------------------------------------------------------------\n",
+    "\n",
+    "Top 10 Most Significant Features:\n",
+    "                                      Feature  Importance\n",
+    "0                                    bedrooms    0.225783\n",
+    "1                                   bathrooms    0.178024\n",
+    "176                   economic: median income    0.070883\n",
+    "55   zoned_school_study_score_over_40_percent    0.053877\n",
+    "2                                   car_parks    0.046199\n",
+    "12                         restaurant_walking    0.027576\n",
+    "177           economic: median age of earners    0.026989\n",
+    "13                         restaurant_driving    0.025471\n",
+    "70            mean_economic: gini coefficient    0.024540\n",
+    "58                            distance_to_cbd    0.024192"
    ]
   },
   {
