added distance to cbd suburb dataframe

--- a/notebooks/1. landing/download_data.ipynb
+++ b/notebooks/1. landing/download_data.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Downloading data\n",
+    "\n",
     "Downloading the SA2 shapefile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
