added domain/suburb folders in landing notebook layer

--- a/notebooks/1. landing/domain/1. combine_domain_dfs.ipynb
+++ b/notebooks/1. landing/domain/1. combine_domain_dfs.ipynb
@@ -31,7 +31,7 @@
     "    .getOrCreate()\n",
     ")\n",
     "\n",
-    "PAGE_DIRECTORY = '../../data/1. landing/domain/pages'"
+    "PAGE_DIRECTORY = '../../../data/1. landing/domain/pages'"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "source": [
     "# this is just used to make sure the data is correct when being read in\n",
     "\n",
-    "listings_links_path = \"../../data/1. landing/domain/metadata/listings_links.csv\"\n",
+    "listings_links_path = \"../../../data/1. landing/domain/metadata/listings_links.csv\"\n",
     "\n",
     "# Open and read the CSV file\n",
     "with open(listings_links_path, 'r') as file:\n",
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_path = \"../data/1. landing/domain/domain_current_listings.parquet\"\n",
+    "output_path = \"../../../data/1. landing/domain/domain_current_listings.parquet\"\n",
     "\n",
     "# repartition the dataframe (as 450+ parititons is very excessive)\n",
     "repartitioned = union_df.coalesce(4)\n",
