--- a/notebooks/1. landing/3. download external and housing.ipynb
+++ b/notebooks/1. landing/3. download external and housing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d5b1283f",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "dc003308",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "6e013ea9",
    "metadata": {},
    "outputs": [
@@ -70,13 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fetching housing/moving quarterly rent.xlsx\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fetching housing/moving quarterly rent.xlsx\n",
       "writing housing/moving quarterly rent.xlsx\n",
       "waiting for sever to reset ..........\n",
       "fetching economic/interest.xlsx\n",
@@ -138,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -152,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
