added ptv to pipeline

--- a/notebooks/3. curated/2. data_joining_pt1.ipynb
+++ b/notebooks/3. curated/2. data_joining_pt1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "SCHOOLS_PATH = '../../data/3. curated/school/school_by_region.csv'\n",
     "DISTANCES_PATH = '../../data/2. raw/distances.csv'\n",
     "LAND_COVER_PATH = '../../data/2. raw/land_cover.csv'\n",
+    "PTV_PATH = '../../data/2. raw/ptv.csv'\n",
     "\n",
     "# Output\n",
     "OUTPUT_PATH = '../../data/3. curated/merged'\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +81,8 @@
     "# get the schools by region df\n",
     "schools_by_region = pd.read_csv(SCHOOLS_PATH)\n",
     "\n",
+    "ptv_df = pd.read_csv(PTV_PATH)\n",
+    "\n",
     "# distances df\n",
     "distances = pd.read_csv(DISTANCES_PATH).drop(columns=['Unnamed: 0', 'geometry', 'regions', 'code', 'centroid', 'route_to_cbd'])\n",
     "\n",
@@ -96,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,6 +119,7 @@
     "merged = pd.merge(df_left_join, expanded_crime_df, on=['suburbs', 'year', 'quarter'], how='left')\n",
     "merged = pd.merge(merged, schools_by_region, on=['suburbs'], how='left')\n",
     "merged = pd.merge(merged, distances, on=['suburbs'], how='left')\n",
+    "merged = pd.merge(merged, ptv_df, on=['suburbs'], how='left')\n",
     "merged = pd.merge(merged, land_cover, on=['suburbs', 'year', 'quarter'], how='left')\n",
     "\n",
     "processing.to_csv(merged, OUTPUT_PATH, OUTPUT_FILENAME)"
