--- a/notebooks/2. raw/1. rename abs.ipynb
+++ b/notebooks/2. raw/1. rename abs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "SA2_CODE_NAME = \"SA2 code\"\n",
     "MERGE_COLUMNS = [\"SA2_MAINCODE_2016\", \"SA2_CODE_2021\", SA2_CODE_NAME, \"year\"]\n",
     "\n",
-    "RELATIVE_PATH_IN = \"../../data/1. landing/ABS/2021/data\"\n",
+    "RELATIVE_PATH_IN = \"../../data/1. landing/ABS/2021\"\n",
     "RELATIVE_PATH_OUT = \"../../data/2. raw/1. renamed/ABS\""
    ]
   },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def write_csv(csv_dict):\n",
     "    # get all the files from the directory with the code\n",
-    "    all_files = os.listdir(RELATIVE_PATH_IN)\n",
-    "    code_paths = [f\"{RELATIVE_PATH_IN}/{file}\" for file in all_files if csv_dict[\"code\"] in file]\n",
+    "    all_files = os.listdir(f\"{RELATIVE_PATH_IN}/data\")\n",
+    "    code_paths = [f\"{RELATIVE_PATH_IN}/data/{file}\" for file in all_files if csv_dict[\"code\"] in file]\n",
     "\n",
     "    # create a new dataframe for each path\n",
     "    code_dataframes = []\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "G5                  G01                           Females  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -583,6 +583,20 @@
     "}\n",
     "write_csv(CSV_STUDYING)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
