added summary notebooks

--- a/notebooks/4. analysis/b. modelling/forecasting.ipynb
+++ b/notebooks/4. analysis/b. modelling/forecasting.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Forecasting Analysis\n",
+    "\n",
+    "This summary notebook explores the rental growth of specific regions, and aims to predict the growth going into the future. The notebook runs a linear regression model accoutning for various time sensitive features.\n",
+    "\n",
+    "It uses the external prices curated dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
