--- a/notebooks/2. raw/2. merge external and housing.ipynb
+++ b/notebooks/2. raw/2. merge external and housing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "4        1  "
       ]
      },
-     "execution_count": 186,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "3            263.333333  "
       ]
      },
-     "execution_count": 187,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "2610                             42.0        2  "
       ]
      },
-     "execution_count": 188,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
        "1     201011002.0       11698.293593  2026        1"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1442,7 @@
        "[5 rows x 111 columns]"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1635,7 @@
        "[295 rows x 5 columns]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -1706,7 +1706,6 @@
        "      <th>economic: variable interest rate</th>\n",
        "      <th>economic: gdp quarterly</th>\n",
        "      <th>...</th>\n",
-       "      <th>relationships: other related individual</th>\n",
        "      <th>relationships: dependent student</th>\n",
        "      <th>relationships: non dependent child</th>\n",
        "      <th>relationships: lone parents</th>\n",
@@ -1715,6 +1714,7 @@
        "      <th>relationships: child under 15</th>\n",
        "      <th>relationships: group household</th>\n",
        "      <th>relationships: married</th>\n",
+       "      <th>overseas: 5 years</th>\n",
        "      <th>economic: number of earners</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1732,7 +1732,6 @@
        "      <td>7.653333</td>\n",
        "      <td>0.9</td>\n",
        "      <td>...</td>\n",
-       "      <td>426.0</td>\n",
        "      <td>994.0</td>\n",
        "      <td>654.0</td>\n",
        "      <td>761.0</td>\n",
@@ -1741,6 +1740,7 @@
        "      <td>2914.0</td>\n",
        "      <td>1798.0</td>\n",
        "      <td>7732.0</td>\n",
+       "      <td>3646.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1756,7 +1756,6 @@
        "      <td>6.820000</td>\n",
        "      <td>0.9</td>\n",
        "      <td>...</td>\n",
-       "      <td>426.0</td>\n",
        "      <td>994.0</td>\n",
        "      <td>654.0</td>\n",
        "      <td>761.0</td>\n",
@@ -1765,6 +1764,7 @@
        "      <td>2914.0</td>\n",
        "      <td>1798.0</td>\n",
        "      <td>7732.0</td>\n",
+       "      <td>3646.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1780,7 +1780,6 @@
        "      <td>6.736667</td>\n",
        "      <td>1.2</td>\n",
        "      <td>...</td>\n",
-       "      <td>426.0</td>\n",
        "      <td>994.0</td>\n",
        "      <td>654.0</td>\n",
        "      <td>761.0</td>\n",
@@ -1789,6 +1788,7 @@
        "      <td>2914.0</td>\n",
        "      <td>1798.0</td>\n",
        "      <td>7732.0</td>\n",
+       "      <td>3646.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1804,7 +1804,6 @@
        "      <td>6.236667</td>\n",
        "      <td>1.2</td>\n",
        "      <td>...</td>\n",
-       "      <td>426.0</td>\n",
        "      <td>994.0</td>\n",
        "      <td>654.0</td>\n",
        "      <td>761.0</td>\n",
@@ -1813,6 +1812,7 @@
        "      <td>2914.0</td>\n",
        "      <td>1798.0</td>\n",
        "      <td>7732.0</td>\n",
+       "      <td>3646.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1828,7 +1828,6 @@
        "      <td>6.070000</td>\n",
        "      <td>0.8</td>\n",
        "      <td>...</td>\n",
-       "      <td>426.0</td>\n",
        "      <td>994.0</td>\n",
        "      <td>654.0</td>\n",
        "      <td>761.0</td>\n",
@@ -1837,11 +1836,12 @@
        "      <td>2914.0</td>\n",
        "      <td>1798.0</td>\n",
        "      <td>7732.0</td>\n",
+       "      <td>3646.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 108 columns</p>\n",
+       "<p>5 rows × 109 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1873,52 +1873,45 @@
        "3                    30.75                          6.236667   \n",
        "4                    30.75                          6.070000   \n",
        "\n",
-       "   economic: gdp quarterly  ...  relationships: other related individual  \\\n",
-       "0                      0.9  ...                                    426.0   \n",
-       "1                      0.9  ...                                    426.0   \n",
-       "2                      1.2  ...                                    426.0   \n",
-       "3                      1.2  ...                                    426.0   \n",
-       "4                      0.8  ...                                    426.0   \n",
+       "   economic: gdp quarterly  ...  relationships: dependent student  \\\n",
+       "0                      0.9  ...                             994.0   \n",
+       "1                      0.9  ...                             994.0   \n",
+       "2                      1.2  ...                             994.0   \n",
+       "3                      1.2  ...                             994.0   \n",
+       "4                      0.8  ...                             994.0   \n",
        "\n",
-       "   relationships: dependent student  relationships: non dependent child  \\\n",
-       "0                             994.0                               654.0   \n",
-       "1                             994.0                               654.0   \n",
-       "2                             994.0                               654.0   \n",
-       "3                             994.0                               654.0   \n",
-       "4                             994.0                               654.0   \n",
+       "   relationships: non dependent child  relationships: lone parents  \\\n",
+       "0                               654.0                        761.0   \n",
+       "1                               654.0                        761.0   \n",
+       "2                               654.0                        761.0   \n",
+       "3                               654.0                        761.0   \n",
+       "4                               654.0                        761.0   \n",
        "\n",
-       "   relationships: lone parents  relationships: defacto  \\\n",
-       "0                        761.0                  4336.0   \n",
-       "1                        761.0                  4336.0   \n",
-       "2                        761.0                  4336.0   \n",
-       "3                        761.0                  4336.0   \n",
-       "4                        761.0                  4336.0   \n",
+       "   relationships: defacto  relationships: lone persons  \\\n",
+       "0                  4336.0                       6156.0   \n",
+       "1                  4336.0                       6156.0   \n",
+       "2                  4336.0                       6156.0   \n",
+       "3                  4336.0                       6156.0   \n",
+       "4                  4336.0                       6156.0   \n",
        "\n",
-       "   relationships: lone persons  relationships: child under 15  \\\n",
-       "0                       6156.0                         2914.0   \n",
-       "1                       6156.0                         2914.0   \n",
-       "2                       6156.0                         2914.0   \n",
-       "3                       6156.0                         2914.0   \n",
-       "4                       6156.0                         2914.0   \n",
+       "   relationships: child under 15  relationships: group household  \\\n",
+       "0                         2914.0                          1798.0   \n",
+       "1                         2914.0                          1798.0   \n",
+       "2                         2914.0                          1798.0   \n",
+       "3                         2914.0                          1798.0   \n",
+       "4                         2914.0                          1798.0   \n",
        "\n",
-       "   relationships: group household  relationships: married  \\\n",
-       "0                          1798.0                  7732.0   \n",
-       "1                          1798.0                  7732.0   \n",
-       "2                          1798.0                  7732.0   \n",
-       "3                          1798.0                  7732.0   \n",
-       "4                          1798.0                  7732.0   \n",
+       "   relationships: married  overseas: 5 years  economic: number of earners  \n",
+       "0                  7732.0             3646.0                          0.0  \n",
+       "1                  7732.0             3646.0                          0.0  \n",
+       "2                  7732.0             3646.0                          0.0  \n",
+       "3                  7732.0             3646.0                          0.0  \n",
+       "4                  7732.0             3646.0                          0.0  \n",
        "\n",
-       "   economic: number of earners  \n",
-       "0                          0.0  \n",
-       "1                          0.0  \n",
-       "2                          0.0  \n",
-       "3                          0.0  \n",
-       "4                          0.0  \n",
-       "\n",
-       "[5 rows x 108 columns]"
+       "[5 rows x 109 columns]"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1928,13 +1921,12 @@
     "# is in the form { 'col_name': 'func', 'col2': 'func' }\n",
     "# ---------------------------------------------------------\n",
     "\n",
-    "           #['overseas: 5 years'] + \\\n",
-    "\n",
     "# list of columns to take the sum of the aggregation for\n",
     "sum_list = [x for x in list(merged_df_sa2.columns) if \"population\" in x] + \\\n",
     "           [x for x in list(merged_df_sa2.columns) if \"birth\" in x] + \\\n",
     "           [x for x in list(merged_df_sa2.columns) if \"studying\" in x] + \\\n",
     "           [x for x in list(merged_df_sa2.columns) if \"relationships\" in x] + \\\n",
+    "           ['overseas: 5 years'] + \\\n",
     "           [\"economic: number of earners\"]\n",
     "\n",
     "\n",
@@ -1963,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
