updated read me

--- a/notebooks/2. raw/distance_to_cbd_suburb.ipynb
+++ b/notebooks/2. raw/distance_to_cbd_suburb.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "### Calculate CBD to Suburb Distance\n",
     "\n",
-    "This notebook takes a suburb and calculates the distance from that suburb to the CBD"
+    "This notebook takes a suburb and calculates the distance from that suburb to the CBD.\n",
+    "\n",
+    "### API Key!!\n",
+    "You need an Openroute API key to execute this notebook. Place it inside `data/metadata/openroute.json` with an attribute of key."
    ]
   },
   {
@@ -22,6 +25,7 @@
     "import os\n",
     "from geopy.distance import geodesic\n",
     "import time\n",
+    "import json\n",
     "\n",
     "sys.path.append(os.path.abspath('../../scripts/2. modules'))\n",
     "import processing\n",
@@ -30,18 +34,34 @@
     "\n",
     "# Output\n",
     "OUTPUT_PATH = '../../data/2. raw'\n",
-    "OUTPUT_FILE_NAME = 'distances.csv'"
+    "OUTPUT_FILE_NAME = 'distances.csv'\n",
+    "\n",
+    "OPENROUTE_API_KEY_PATH = '../../data/metadata/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'processing' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m regions_df \u001b[38;5;241m=\u001b[39m \u001b[43mprocessing\u001b[49m\u001b[38;5;241m.\u001b[39mget_regions_df(\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      3\u001b[0m key \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(OPENROUTE_API_KEY_PATH)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkey\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      5\u001b[0m client \u001b[38;5;241m=\u001b[39m openrouteservice\u001b[38;5;241m.\u001b[39mClient(key\u001b[38;5;241m=\u001b[39mkey)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'processing' is not defined"
+     ]
+    }
+   ],
    "source": [
     "regions_df = processing.get_regions_df(2)\n",
     "\n",
-    "client = openrouteservice.Client(key='5b3ce3597851110001cf624899819d8fdf27474db7f91769a7b64b02')\n",
+    "key = json.load(OPENROUTE_API_KEY_PATH)['key']\n",
+    "\n",
+    "client = openrouteservice.Client(key=key)\n",
     "\n",
     "regions_df['centroid'] = regions_df.geometry.centroid\n",
     "\n",
