--- a/notebooks/1. landing/4. download_shapefile_external.ipynb
+++ b/notebooks/1. landing/4. download_shapefile_external.ipynb
@@ -21,7 +21,7 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "DOWNLOAD_PATH = '../../../data/1. landing'\n",
+    "DOWNLOAD_PATH = '../../data/1. landing'\n",
     "SHAPEFILE_PATH = DOWNLOAD_PATH + '/shapefile'\n",
     "\n",
     "\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,8 @@
       "File downloaded and saved to school/locations.csv\n",
       "File downloaded and saved to school/achievement.xlsx\n",
       "Extracted 'postcomp_for_publication' and saved as CSV to ../../../data/1. landing/school/achievement.csv\n",
-      "Skipped downloading crime.csv as exists\n"
+      "Skipped downloading crime.csv as exists\n",
+      "Downloaded and unzipped land_cover\n"
      ]
     }
    ],
