--- a/notebooks/3. curated/4. data_joining_pt3.ipynb
+++ b/notebooks/3. curated/4. data_joining_pt3.ipynb
@@ -10,15 +10,15 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "sys.path.append(os.path.abspath('../../../scripts/2. modules'))\n",
+    "sys.path.append(os.path.abspath('../../scripts/2. modules'))\n",
     "import processing\n",
     "\n",
     "# Inputs\n",
-    "JOINED_PATH_LEFT = '../../../data/3. curated/merged/crime_schools_distances_land.csv'\n",
-    "JOINED_PATH_RIGHT = '../../../data/3. curated/merged/external_prices.csv'\n",
+    "JOINED_PATH_LEFT = '../../data/3. curated/merged/crime_schools_distances_land.csv'\n",
+    "JOINED_PATH_RIGHT = '../../data/3. curated/merged/external_prices.csv'\n",
     "\n",
     "# Outputs\n",
-    "OUTPUT_PATH = '../../../data/3. curated/merged'\n",
+    "OUTPUT_PATH = '../../data/3. curated/merged'\n",
     "OUTPUT_NAME = 'all_historical_data.csv'"
    ]
   },
