--- a/notebooks/3. curated/3. curating historic.ipynb
+++ b/notebooks/3. curated/3. curating historic.ipynb
@@ -2053,7 +2053,7 @@
    "outputs": [],
    "source": [
     "# read and filter\n",
-    "distances = pd.read_csv(\"../../data/2. raw/location/distances.csv\")\n",
+    "distances = pd.read_csv(\"../../data/2. raw/distances.csv\")\n",
     "distances = distances[[\"suburbs\", \"crow_distance_to_cbd\", \"distance_to_cbd\"]]\n",
     "\n",
     "for distance_metric in [\"crow_distance_to_cbd\", \"distance_to_cbd\"]:\n",
