adding modelling creation when necessary

--- a/notebooks/4. analysis/b. modelling/1. get_forecast_dataset.ipynb
+++ b/notebooks/4. analysis/b. modelling/1. get_forecast_dataset.ipynb
@@ -24,6 +24,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(RELATIVE_PATH_OUT, exist_ok=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
